crates/wtflow-render/tests/snapshots/render__switch_try_parallel.snap
---
source: crates/wtflow-render/tests/render.rs
expression: "graph(vec![tx, par, emit], false)"
---
---
title: sample
---
flowchart TD
  start(["Start"])
  finish(["Finish"])
  start --> n1
  subgraph n1["transaction"]
    n2{"status"}
    n2 -->|"a"| n3
    n3[["a()"]]:::k_call
    n2 -->|"b"| n4
    n3 --> n4
    n4["break"]
    n2 -->|"default"| n5
    n5[/"wait"/]
  end
  style n1 fill:#fff4d6,stroke:#b88700,stroke-width:2px
  n6(["throw error"]):::k_fail
  n1 -.->|"Error"| n6
  n4 --> n7
  n5 --> n7
  n6 --> n7
  n7[["close()"]]:::k_call
  n7 --> n8
  subgraph n8["all"]
    n9[["one()"]]:::k_call
    n10[["two()"]]:::k_call
  end
  n9 --> n11
  n10 --> n11
  n11>"publish() → done"]:::k_emit
  n11 --> finish
  classDef k_call fill:#e8f0ff,stroke:#4b6cb7
  classDef k_emit fill:#e5f5e0,stroke:#4a8a3b
  classDef k_fail fill:#ffe4e4,stroke:#b33
  classDef k_term fill:#eee,stroke:#666
